--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8" />
+    <title>2025 Cars</title>
+    <link rel="stylesheet" href="styles.css"> 
+</head>
+<body>
+    <h1>2025 Cars</h1>
+    <div class="car-container"></div> 
+    <script src="fetchData.js"></script> 
+    <script src="cars.js"></script> 
+</body>
+</html>
